cdk.out/StorefrontNetworkStack.template.json
{
 "Resources": {
  "StorefrontVPC669C7EEC": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/Resource"
   }
  },
  "StorefrontVPCpublicSubnet1SubnetCB9C4E35": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1/Subnet"
   }
  },
  "StorefrontVPCpublicSubnet1RouteTable90F4EDF9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1/RouteTable"
   }
  },
  "StorefrontVPCpublicSubnet1RouteTableAssociation487009BF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StorefrontVPCpublicSubnet1RouteTable90F4EDF9"
    },
    "SubnetId": {
     "Ref": "StorefrontVPCpublicSubnet1SubnetCB9C4E35"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1/RouteTableAssociation"
   }
  },
  "StorefrontVPCpublicSubnet1DefaultRoute9C12AA69": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "StorefrontVPCIGWF5884C76"
    },
    "RouteTableId": {
     "Ref": "StorefrontVPCpublicSubnet1RouteTable90F4EDF9"
    }
   },
   "DependsOn": [
    "StorefrontVPCVPCGW0758E5C1"
   ],
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1/DefaultRoute"
   }
  },
  "StorefrontVPCpublicSubnet1EIP7E6DE51B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1/EIP"
   }
  },
  "StorefrontVPCpublicSubnet1NATGateway7B3EC066": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "StorefrontVPCpublicSubnet1EIP7E6DE51B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "StorefrontVPCpublicSubnet1SubnetCB9C4E35"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "StorefrontVPCpublicSubnet1DefaultRoute9C12AA69",
    "StorefrontVPCpublicSubnet1RouteTableAssociation487009BF"
   ],
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet1/NATGateway"
   }
  },
  "StorefrontVPCpublicSubnet2SubnetB8FD93AC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet2/Subnet"
   }
  },
  "StorefrontVPCpublicSubnet2RouteTableF5BEF131": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet2/RouteTable"
   }
  },
  "StorefrontVPCpublicSubnet2RouteTableAssociation89BEE828": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StorefrontVPCpublicSubnet2RouteTableF5BEF131"
    },
    "SubnetId": {
     "Ref": "StorefrontVPCpublicSubnet2SubnetB8FD93AC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet2/RouteTableAssociation"
   }
  },
  "StorefrontVPCpublicSubnet2DefaultRoute4D6C4E40": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "StorefrontVPCIGWF5884C76"
    },
    "RouteTableId": {
     "Ref": "StorefrontVPCpublicSubnet2RouteTableF5BEF131"
    }
   },
   "DependsOn": [
    "StorefrontVPCVPCGW0758E5C1"
   ],
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/publicSubnet2/DefaultRoute"
   }
  },
  "StorefrontVPCprivateSubnet1Subnet45E3C49A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet1/Subnet"
   }
  },
  "StorefrontVPCprivateSubnet1RouteTable7D545D08": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet1/RouteTable"
   }
  },
  "StorefrontVPCprivateSubnet1RouteTableAssociation37E61F38": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StorefrontVPCprivateSubnet1RouteTable7D545D08"
    },
    "SubnetId": {
     "Ref": "StorefrontVPCprivateSubnet1Subnet45E3C49A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet1/RouteTableAssociation"
   }
  },
  "StorefrontVPCprivateSubnet1DefaultRoute03682400": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "StorefrontVPCpublicSubnet1NATGateway7B3EC066"
    },
    "RouteTableId": {
     "Ref": "StorefrontVPCprivateSubnet1RouteTable7D545D08"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet1/DefaultRoute"
   }
  },
  "StorefrontVPCprivateSubnet2Subnet748F9E51": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet2/Subnet"
   }
  },
  "StorefrontVPCprivateSubnet2RouteTableDA4C94BD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet2/RouteTable"
   }
  },
  "StorefrontVPCprivateSubnet2RouteTableAssociationCD8A9850": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "StorefrontVPCprivateSubnet2RouteTableDA4C94BD"
    },
    "SubnetId": {
     "Ref": "StorefrontVPCprivateSubnet2Subnet748F9E51"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet2/RouteTableAssociation"
   }
  },
  "StorefrontVPCprivateSubnet2DefaultRouteD23FA071": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "StorefrontVPCpublicSubnet1NATGateway7B3EC066"
    },
    "RouteTableId": {
     "Ref": "StorefrontVPCprivateSubnet2RouteTableDA4C94BD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/privateSubnet2/DefaultRoute"
   }
  },
  "StorefrontVPCIGWF5884C76": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "StorefrontNetworkStack/StorefrontVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/IGW"
   }
  },
  "StorefrontVPCVPCGW0758E5C1": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "StorefrontVPCIGWF5884C76"
    },
    "VpcId": {
     "Ref": "StorefrontVPC669C7EEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/StorefrontVPC/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WPwQ6CMBBEv4V7qQrx4JEQY7iYBgxXU+oaK9CadishhH+3iMhp3k4mk9mI7uID3Qa8s6G41WEjKzoUyEVNvHUFEdGhfAmS3lXJUsJc1UhRuEoBTt5KuXYIF141sPqrl1irheQotfqHJzhmbJIzxxNH6HhPmJFvj2txphCM5yUwL/ldCfqpjxYUjiQHq50R396FR8J6fGi1if2fdB88rZShcQplCzSf9QOpcz8fAwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "StorefrontNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefStorefrontVPCpublicSubnet1SubnetCB9C4E35C11CF4CB": {
   "Value": {
    "Ref": "StorefrontVPCpublicSubnet1SubnetCB9C4E35"
   },
   "Export": {
    "Name": "StorefrontNetworkStack:ExportsOutputRefStorefrontVPCpublicSubnet1SubnetCB9C4E35C11CF4CB"
   }
  },
  "ExportsOutputRefStorefrontVPCpublicSubnet2SubnetB8FD93ACFD177AF3": {
   "Value": {
    "Ref": "StorefrontVPCpublicSubnet2SubnetB8FD93AC"
   },
   "Export": {
    "Name": "StorefrontNetworkStack:ExportsOutputRefStorefrontVPCpublicSubnet2SubnetB8FD93ACFD177AF3"
   }
  },
  "ExportsOutputRefStorefrontVPC669C7EECD0143642": {
   "Value": {
    "Ref": "StorefrontVPC669C7EEC"
   },
   "Export": {
    "Name": "StorefrontNetworkStack:ExportsOutputRefStorefrontVPC669C7EECD0143642"
   }
  },
  "ExportsOutputRefStorefrontVPCprivateSubnet1Subnet45E3C49A2466390C": {
   "Value": {
    "Ref": "StorefrontVPCprivateSubnet1Subnet45E3C49A"
   },
   "Export": {
    "Name": "StorefrontNetworkStack:ExportsOutputRefStorefrontVPCprivateSubnet1Subnet45E3C49A2466390C"
   }
  },
  "ExportsOutputRefStorefrontVPCprivateSubnet2Subnet748F9E51CDB8E869": {
   "Value": {
    "Ref": "StorefrontVPCprivateSubnet2Subnet748F9E51"
   },
   "Export": {
    "Name": "StorefrontNetworkStack:ExportsOutputRefStorefrontVPCprivateSubnet2Subnet748F9E51CDB8E869"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
